Tweak text position on modal, fix for z-index when both books hovered

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,7 +48,7 @@
 }
 
 #clickMeText {
-  margin-left: 55%;
+  margin-left: 50%;
   font-size: 2vw;
 }
 
@@ -90,6 +90,7 @@
             transform: scale(1.08);
             box-shadow: 10px 10px 25px rgb(0, 0, 0);
             border-radius: 1%;
+            z-index: 2;
         }
     }
 }
